done all the tasks and connected to atlas
